[package]
name = "xbbg-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmarks for xbbg — performance, allocation profiling, and live Bloomberg tests"
publish = false
autobenches = false

[lib]
name = "xbbg_bench"

[dependencies]
# Crates under test
xbbg_core = { path = "../xbbg-core" }
xbbg-async = { path = "../xbbg-async", features = ["bench-internals"] }

# Benchmark runner/runtime
arrow-array = { version = "59.0.0", default-features = false }
arrow-schema = "59.0.0"
chrono = "0.4"
tokio = { version = "1.48", features = ["rt-multi-thread", "time"] }

# Existing experimental benchmark dependencies kept for unregistered local benches.
arc-swap = "1"
criterion = "0.5"
dhat = "0.3"
hdrhistogram = "7.5"
tempfile = "3.15"

[package.metadata.cargo-udeps.ignore]
normal = ["criterion", "dhat", "hdrhistogram", "tempfile"]

# =============================================================================
# Supported benchmark suite
# =============================================================================
# Run with: cargo bench --package xbbg-bench --bench xbbg_benchmark_suite

[[bench]]
name = "xbbg_benchmark_suite"
harness = false

[[bench]]
name = "lockfree_paths"
harness = false
