[package]
name = "xbbg_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust core for xbbg Python package (PyO3)"

[lib]
name = "xbbg_core"

[features]
default = ["mock"]
mock = ["xbbg-sys/mock"]
live = ["xbbg-sys/live"]
event-log = []
schema-debug = []

[dependencies]
thiserror = "2.0"
xbbg-sys = { path = "../xbbg-sys", default-features = false }

[dev-dependencies]
criterion = "0.5"
dhat = "0.3"

# =============================================================================
# Benchmarks
# =============================================================================
# All benchmarks require Bloomberg connection (live feature).
# Run with: cargo bench --package xbbg_core --no-default-features --features live
#
# Individual benchmarks:
#   cargo bench --package xbbg_core --bench live_bdp --no-default-features --features live
#   cargo bench --package xbbg_core --bench live_bdp_profiled --no-default-features --features live
#   cargo bench --package xbbg_core --bench live_subscription --no-default-features --features live

# Simple BDP round-trip benchmark
[[bench]]
name = "live_bdp"
harness = false

# Profiled BDP with phase breakdown
[[bench]]
name = "live_bdp_profiled"
harness = false

# Subscription latency and throughput
[[bench]]
name = "live_subscription"
harness = false

# Pure Rust datetime conversion (no Bloomberg needed)
[[bench]]
name = "datetime"
harness = false

# Name interning benchmark
[[bench]]
name = "name"
harness = false

# Allocation profiling (dhat)
[[bench]]
name = "alloc_profile"
harness = false

# Allocation tracking with Criterion
[[bench]]
name = "alloc_criterion"
harness = false
