[package]
name = "xbbg_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust core for xbbg Python package (PyO3)"

[lib]
name = "xbbg_core"

[features]
default = ["live"]
mock = ["xbbg-sys/mock"]
live = ["xbbg-sys/live"]

[dependencies]
thiserror = "2.0"
xbbg-sys = { path = "../xbbg-sys", default-features = false }
xbbg-log = { path = "../xbbg-log" }
rustc-hash = "2.0"  # Fast non-cryptographic hashing for Name cache

# Benchmarks have been consolidated into crates/xbbg-bench.
# Run with: cargo bench --package xbbg-bench
