[package]
name = "xbbg-ext"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Extension utilities for xbbg - futures resolution, currency adjustment, historical data helpers"

[dependencies]
# Arrow for zero-copy DataFrame operations (narrow crates keep Python wheels small).
arrow-array = { version = "58.1.0", default-features = false, features = ["chrono-tz"] }
arrow-schema = "58.1.0"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
chrono-tz = "0.10"

# Compile-time perfect hash maps for constants
phf = { version = "0.11", features = ["macros"] }

# Error handling
thiserror = "2"

# Market rules loading
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Benchmarks have been consolidated into crates/xbbg-bench.
