[package]
name = "xbbg-log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Logging infrastructure for xbbg — zero-GIL atomic level filter with tracing"
publish = false

[dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
