[package]
name = "xbbg-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI abstraction over blpapi-sys"
publish = false

[features]
default = ["live"]
live = ["blpapi-sys"]

[dependencies]
blpapi-sys = { path = "../blpapi-sys", optional = true }